# image-resizing-tool

./: CMakeLists.txt  README.md
include/: bilinear_interpolation.hpp  constants.hpp  image_struct.hpp  nearest_neighbor.hpp  scaler.hpp  simd_bilinear_interpolation.hpp  utils.hpp
src/: bilinear_interpolation.cpp  image_struct.cpp  main.cpp  nearest_neighbor.cpp  simd_bilinear_interpolation.cpp
